[project]
name = "nldate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaing04", email = "haingqsusana@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
